// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VirtualList.svelte > render > should render 1`] = `
<virtual-list-viewport
  class="relative block svelte-1nt637a overflow-y-auto"
  role="listbox"
  style="height: 4px;"
  tabindex="0"
>
  <virtual-list-contents
    class="block"
    style="padding-top: 0px; padding-bottom: 200px;"
  >
    <virtual-list-item
      aria-current="false"
      aria-selected="false"
      data-path="0"
    >
       
      <p>
        Item 1
      </p>
      
       
    </virtual-list-item>
    <virtual-list-item
      aria-current="false"
      aria-selected="false"
      data-path="1"
    >
       
      <p>
        Item 2
      </p>
      
       
    </virtual-list-item>
    <virtual-list-item
      aria-current="false"
      aria-selected="false"
      data-path="2"
    >
       
      <p>
        Item 3
      </p>
      
       
    </virtual-list-item>
    <virtual-list-item
      aria-current="false"
      aria-selected="false"
      data-path="3"
    >
       
      <p>
        Item 4
      </p>
      
       
    </virtual-list-item>
    <virtual-list-item
      aria-current="false"
      aria-selected="false"
      data-path="4"
    >
       
      <p>
        Item 5
      </p>
      
       
    </virtual-list-item>
  </virtual-list-contents>
  <iframe
    aria-hidden="true"
    src="about:blank"
    style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
    tabindex="-1"
  />
</virtual-list-viewport>
`;

exports[`VirtualList.svelte > render > should render using slot 1`] = `
<virtual-list-viewport
  class="relative block svelte-1nt637a overflow-y-auto"
  role="listbox"
  style="height: 4px;"
  tabindex="0"
>
  <virtual-list-contents
    class="block"
    style="padding-top: 0px; padding-bottom: 200px;"
  >
    <virtual-list-item
      aria-current="false"
      aria-selected="false"
      data-path="0"
    >
      <div>
        Item 1
      </div>
       
    </virtual-list-item>
    <virtual-list-item
      aria-current="false"
      aria-selected="false"
      data-path="1"
    >
      <div>
        Item 2
      </div>
       
    </virtual-list-item>
    <virtual-list-item
      aria-current="false"
      aria-selected="false"
      data-path="2"
    >
      <div>
        Item 3
      </div>
       
    </virtual-list-item>
    <virtual-list-item
      aria-current="false"
      aria-selected="false"
      data-path="3"
    >
      <div>
        Item 4
      </div>
       
    </virtual-list-item>
    <virtual-list-item
      aria-current="false"
      aria-selected="false"
      data-path="4"
    >
      <div>
        Item 5
      </div>
       
    </virtual-list-item>
  </virtual-list-contents>
  <iframe
    aria-hidden="true"
    src="about:blank"
    style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
    tabindex="-1"
  />
</virtual-list-viewport>
`;
